img alt changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <footer>
       <div class="container footer"  id="adress">
         <ul>
-          <li><a href="https://twitter.com/uglynixon?s=09" target="_blank" title="twitter"> <img src="../SiteAbout — копия/IMG/twitter (1).svg" width="40px" height="40px" alt="twitter"></a>Twitter</li>
+          <li><a href="https://twitter.com/uglynixon?s=09" target="_blank" title="twitter"> <img src="../SiteAbout — копия/IMG/twitter (1).svg" width="40px" height="40px"></a>Twitter</li>
           <li><a href="https://www.instagram.com/?hl=ru" target="_blank" title="Instagram"><img src="../SiteAbout — копия/IMG/instagram (1).svg" width="40px" height="40px"></a> Instagram</li>
           <li><a href="https://www.youtube.com/" target="_blank" title="Youtube"><img src="../SiteAbout — копия/IMG/play (1).svg" width="40px" height="40px"></a> Youtube</li>
           <li><a href="tg://resolve?domain=ugly_nixon" target="_blank"><img src="../SiteAbout — копия/IMG/telegram.svg" width="40px" height="40px"></a>Telegram</li>
